--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href="contacto.html">
 <img src="file:///C:/Users/leste/Desktop/Pagina/Menu/Contacto.png" width="190px" height="190px" border="0" alt="Boton de contacto"></a>
 
-<img src="..file:///C:/Users/leste/Desktop/Pagina/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado">
+<img src="C:/Users/leste/Desktop/Pagina/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado">
 
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
 <tr>
