--- a/nosotros.html
+++ b/nosotros.html
@@ -19,7 +19,7 @@
 <img src="file:///C:/Users/leste/Desktop/Pagina/Menu/Contacto.png" width="190px" height="190px" border="0" alt="Boton de contacto"></a>
 
 <p><center>
-<img src="file:///C:/Users/leste/Desktop/Pagina/Menu/quienes-somos.png" Gborder="0" alt="Barner de nosotros">
+<img src="file:///C:/Users/leste/Desktop/Pagina/Menu/quienes-somos.png" border="0" alt="barner de nosotros">
 </p></center>
 
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
