--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Proyecto Guias Digitales</title>
 </head>
 
-<center><body bgcolor="#D4B3FF">
+<center><bgcolor="#D4B3FF">
 
 <img src="file:///C:/Users/leste/Desktop/Pagina/Menu/Logo%20transparente.png"200px" height="200px" border="0" alt="Estudios Digitales">
 
