--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
 
 <title>Proyecto Guias Digitales</title>
 </head>
-
-<center><bgcolor="#D4B3FF">
-
-<img src="file:///C:/Users/leste/Desktop/Pagina/Menu/Logo%20transparente.png"200px" height="200px" border="0" alt="Estudios Digitales">
+<body><img src="escritorio/Logo transparente.png"200px" height="200px" border="0" alt="Estudios Digitales">
 
 <a href="index.html">
-<img src="file:///C:/Users/leste/Desktop/Pagina/Menu/boton%20de%20inicio.png" width="190px" height="190px" border="0" alt="Boton de inicio"></a>
+<img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0" alt="Boton de inicio"></a>
 <a href="nosotros.html">
-<img src="file:///C:/Users/leste/Desktop/Pagina/Menu/boton%20nosotros.png" width="190px" height="190px" border="0" alt="Boton de nosotros"></a>
+<img src="escritorio/boton de nosotros.png" width="190px" height="190px" border="0" alt="Boton de nosotros"></a>
 <a href="contacto.html">
-<img src="file:///C:/Users/leste/Desktop/Pagina/Menu/Contacto.png" width="190px" height="190px" border="0" alt="Boton de contacto"></a>
+<img src="escritorio/Contacto.png" width="190px" height="190px" border="0" alt="Boton de contacto"></a>
 
-<img src="escritorio/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado">
+<img src="escritorio/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado"></body>
+<center><bgcolor="#D4B3FF">
 
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
 <tr>
@@ -58,6 +56,5 @@ Además, en este nivel, se enseña cómo usar la tecnología de forma ética y p
 <a href="<p xmlns:cc="http://creativecommons.org/ns#" >Esta obra está licenciada bajo <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;" >CC BY-NC 4.0<img style="height:22px!important; margen izquierdo:3px; vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important; margen izquierdo:3px; vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important; margen izquierdo:3px; vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt=""></a></p></a>
 
 </center>
-
-</body>
+  
 </html>
