--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title>Proyecto Guias Digitales</title>
 </head>
-<body><img src="escritorio/Logo transparente.png"200px" height="200px" border="0" alt="Estudios Digitales">
+<img src="escritorio/Logo transparente.png"200px" height="200px" border="0" alt="Estudios Digitales">
 
 <a href="index.html">
 <img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0" alt="Boton de inicio"></a>
@@ -15,7 +15,7 @@
 <a href="contacto.html">
 <img src="escritorio/Contacto.png" width="190px" height="190px" border="0" alt="Boton de contacto"></a>
 
-<img src="escritorio/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado"></body>
+<img src="escritorio/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado">
 <center><body bgcolor="#D4B3FF">
 
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
