--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <img src="escritorio/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado">
 
+</center>
+  
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
 <tr>
 <td coldspan="2"><center><font face="arial"><h1>¿Que Aprendere Con Este Sitio Web?
