--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <center><body bgcolor="#D4B3FF">
 
-<body background="escritorio/Logo transparente.png"200px" height="200px" border="0" alt="Estudios Digitales"></body>
+<body background="escritorio/Logo transparente.png"200px" height="200px" border="0"></body>
 
 <a href="index.html">
 <img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0" alt="Boton de inicio"></a>
