--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body background="escritorio/Logo transparente.png"200px" height="200px" border="0"></body>
 
 <a href="index.html">
-<img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0" alt="Boton de inicio"></a>
+<img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0"></a>
 <a href="nosotros.html">
-<img src="escritorio/boton de nosotros.png" width="190px" height="190px" border="0" alt="Boton de nosotros"></a>
+<img src="escritorio/boton de nosotros.png" width="190px" height="190px" border="0"></a>
 <a href="contacto.html">
-<img src="escritorio/Contacto.png" width="190px" height="190px" border="0" alt="Boton de contacto"></a>
+<img src="escritorio/Contacto.png" width="190px" height="190px" border="0"></a>
 
-<img src="escritorio/Baner.png" width="60%" border="0" alt="Barner con los tres niveles de aprendizaje básico, intermedio y avanzado">
+<img src="escritorio/Baner.png" width="60%" border="0">
 
 </center>
   
