--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <center><body bgcolor="#D4B3FF">
 
-<body img src="escritorio/Logo transparente.png"200px" height="200px" border="0"></body>
+<img src="escritorio/Logo transparente.png"200px" height="200px" border="0">
 
 <a href="index.html">
 <img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0"></a>
