--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 <a href="contacto.html">
 <img src="escritorio/Contacto.png" width="190px" height="190px" border="0"></a>
 
-<img src="escritorio/Baner.png" width="60%" border="0">
-
-</center>
+<img src="escritorio/Baner.png" width="60%" border="0"></center>
   
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
 <tr>
