--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 <center><body bgcolor="#D4B3FF">
 
-<img src="escritorio/Pagina/Logo transparente.png"200px" height="200px" border="0">
+<img src="escritorio/Logo transparente.png"200px" height="200px" border="0">
 
 <a href="index.html">
-<img src="escritorio/Pagina/boton de inicio.png" width="190px" height="190px" border="0"></a>
+<img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0"></a>
 <a href="nosotros.html">
-<img src="escritorio/Pagina/boton de nosotros.png" width="190px" height="190px" border="0"></a>
+<img src="escritorio/boton de nosotros.png" width="190px" height="190px" border="0"></a>
 <a href="contacto.html">
-<img src="escritorio/Pagina/Contacto.png" width="190px" height="190px" border="0"></a>
-<img src="escritorio/Pagina/Baner.png" width="60%" border="0"></center>
+<img src="escritorio/Contacto.png" width="190px" height="190px" border="0"></a>
+<img src="escritorio/Baner.png" width="60%" border="0"></center>
   
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
 <tr>
