--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 <title>Proyecto Guias Digitales</title>
 </head>
 
-<center><body bgcolor="#D4B3FF">
+<center><body background="Menu/fondo.jfif" bgcolor="#D4B3FF">
 
-<img src="escritorio/Logo transparente.png"200px" height="200px" border="0">
+<img src="Menu/Logo transparente.png"200px" height="200px" border="0">
 
 <a href="index.html">
-<img src="escritorio/boton de inicio.png" width="190px" height="190px" border="0"></a>
+<img src="Menu/boton de inicio.png" width="190px" height="190px" border="0"></a>
 <a href="nosotros.html">
-<img src="escritorio/boton de nosotros.png" width="190px" height="190px" border="0"></a>
+<img src="Menu/boton de nosotros.png" width="190px" height="190px" border="0"></a>
 <a href="contacto.html">
-<img src="escritorio/Contacto.png" width="190px" height="190px" border="0"></a>
-<img src="escritorio/Baner.png" width="60%" border="0"></center>
+<img src="Menu/Contacto.png" width="190px" height="190px" border="0"></a>
+<img src="Menu/Baner.png" width="60%" border="0"></center>
   
 <center><table border ="0" width="80%" bgcolor="#DAECF7">
 <tr>
